# iab-validator

./: CMakeHelp.md  CMakeLists.txt  Changelog.md  LICENSE  ReadMe.md  ToolHelp.md
.github/workflows/: CI_Build_CMake.yml
app/: ValidateIABStream.cpp  ValidateIABStream.h  main.cpp
include/: IABDataTypes.h  IABElementsAPI.h  IABErrors.h  IABParserAPI.h  IABUtilities.h  IABValidatorAPI.h  IABVersion.h
src/: CMakeLists.txt
src/codec/: CMakeLists.txt
src/codec/include/: DLCAudioData.h  DLCCodec.h  DLCFullDecoder.h  DLCSimpleEncoder.h
src/codec/src/: DLCAudioData.cpp  DLCFullDecoder.cpp  DLCSimpleEncoder.cpp
src/common/: IABConstants.h  IABElements.cpp  IABElements.h  IABUtilities.cpp
src/common-stream/: CMakeLists.txt
src/common-stream/bitstream/: BitStreamIOHelpers.h  BitStreamReaderT.cpp  BitStreamReaderT.h  BitStreamStateT.cpp  BitStreamStateT.h  BitStreamWriterT.cpp  BitStreamWriterT.h
src/common-stream/bytestream/: ByteStreamIOHelpers.h  ByteStreamReaderT.cpp  ByteStreamReaderT.h  ByteStreamStateT.h  ByteStreamWriterT.cpp  ByteStreamWriterT.h
src/common-stream/hash/: CRC16.cpp  CRC16.h  CRCGenerator.h  HashGenerator.h  MD5Generator.cpp  MD5Generator.h
src/common-stream/rawstream/: RawIStream.cpp  RawIStream.h  RawOStream.cpp  RawOStream.h  RawStream.cpp  RawStream.h
src/common-stream/stream/: StreamBasicTypes.h  StreamDefines.cpp  StreamDefines.h  StreamTypes.cpp  StreamTypes.h
src/common-stream/utils/: ByteSwap.cpp  ByteSwap.h  Namespace.h  PCMUtilities.h  StringUtils.cpp  StringUtils.h  iitersbuf.h  nullptrOldCompilers.h  opbacksbuf.h  rawbuf.h
src/parser/: CMakeLists.txt  IABParser.cpp  IABParser.h
src/validator/: CMakeLists.txt  IABValidator.cpp  IABValidator.h
test/reference/cA/: Stream101_cA.json  Stream102_cA.json  Stream104_cA.json  Stream105_cA.json  Stream106_cA.json  Stream107_cA.json  Stream108_cA.json  Stream109_cA.json  Stream10_cA.json  Stream110_cA.json  Stream112_cA.json  Stream113_cA.json  Stream115_cA.json  Stream118_cA.json  Stream11_cA.json  Stream120_cA.json  Stream121_cA.json  Stream122_cA.json  Stream123_cA.json  Stream124_cA.json  Stream125_cA.json  Stream126_cA.json  Stream127_cA.json  Stream128_cA.json  Stream129_cA.json  Stream12_cA.json  Stream130_cA.json  Stream131_cA.json  Stream132_cA.json  Stream133_cA.json  Stream134_cA.json  Stream135_cA.json  Stream136_cA.json  Stream137_cA.json  Stream138_cA.json  Stream139_cA.json  Stream13_cA.json  Stream140_cA.json  Stream141_cA.json  Stream142_cA.json  (+84 more)
test/scripts/: run_all.sh  validate_cA_r1.sh
